welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
	var vuBiscuit()=false
            ^Program:3: error: not found: value estsurBiscuit
		if (estsurBiscuit()) {
                    ^Program:4: error: not found: value vuBiscuit
			vuBiscuit=true
                        ^Program:5: error: not found: value vuBiscuit
			return vuBiscuit
                               ^Program:10: error: not found: value vuBiscuit
		if (estSurBiscuit()) {vuBiscuit=true}
                                      ^Program:15: error: not found: value vuBiscuit
	     return vuBiscuit
                    ^